--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioTorneo.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioTorneo.form
@@ -32,9 +32,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="BotonSalir" min="-2" pref="161" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Component id="BotonRegistrarEquipos" min="-2" pref="146" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="186" max="-2" attributes="0"/>
                       <Component id="BotonGuardarDatos" min="-2" pref="138" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="BotonRegistrarJueces" min="-2" pref="145" max="-2" attributes="0"/>
@@ -53,7 +51,6 @@
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="BotonRegistrarJueces" max="32767" attributes="0"/>
                   <Component id="BotonGuardarDatos" max="32767" attributes="0"/>
-                  <Component id="BotonRegistrarEquipos" max="32767" attributes="0"/>
                   <Component id="BotonSalir" min="-2" pref="59" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -759,18 +756,10 @@
     </Component>
     <Component class="javax.swing.JButton" name="BotonGuardarDatos">
       <Properties>
-        <Property name="text" type="java.lang.String" value="GUARDAR DATOS"/>
+        <Property name="text" type="java.lang.String" value="CONTINUAR"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonGuardarDatosActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="BotonRegistrarEquipos">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="REGISTRAR EQUIPOS"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonRegistrarEquiposActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="BotonSalir">
